First pass migrate to LibVLC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         Enums/system.h
         Managers/videomanager.h Managers/videomanager.cpp
         Managers/audiomanager.h Managers/audiomanager.cpp
+        Managers/vlcmanager.h Managers/vlcmanager.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET AutoController2 APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
