--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         Managers/logmanager.h Managers/logmanager.cpp
         Managers/managercollection.h
         Helpers/jsonhelper.h Helpers/jsonhelper.cpp
+        Managers/keyboardmanager.h Managers/keyboardmanager.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET AutoController2 APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
