--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         Programs/System/customcommand.h Programs/System/customcommand.cpp
         Programs/settingbase.h
         Programs/Settings/settingcombobox.h Programs/Settings/settingcombobox.cpp
+        Programs/Settings/settingtextedit.h Programs/Settings/settingtextedit.cpp
+        Programs/Settings/settinglineedit.h Programs/Settings/settinglineedit.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET AutoController2 APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
