--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         Programs/Settings/settingtextedit.h Programs/Settings/settingtextedit.cpp
         Programs/Settings/settinglineedit.h Programs/Settings/settinglineedit.cpp
         Helpers/stickpainter.h Helpers/stickpainter.cpp
+        Managers/joystickmanager.h Managers/joystickmanager.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET AutoController2 APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
