--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         Programs/Settings/settinglineedit.h Programs/Settings/settinglineedit.cpp
         Helpers/stickpainter.h Helpers/stickpainter.cpp
         Managers/joystickmanager.h Managers/joystickmanager.cpp
+        Programs/System/commandrecorder.h Programs/System/commandrecorder.cpp
         Programs/Settings/settingtextbrowser.h Programs/Settings/settingtextbrowser.cpp
     )
 # Define target properties for Android with Qt 6 as:
