--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         Managers/serialmanager.h Managers/serialmanager.cpp
         Managers/videomanager.h Managers/videomanager.cpp
         Managers/vlcmanager.h Managers/vlcmanager.cpp
+        Programs/Modules/Common/runcommand.h Programs/Modules/Common/runcommand.cpp
         Programs/Modules/modulebase.h Programs/Modules/modulebase.cpp
         Programs/Settings/settingbase.h
         Programs/Settings/settingcombobox.h Programs/Settings/settingcombobox.cpp
