--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         Managers/serialmanager.h Managers/serialmanager.cpp
         Managers/videomanager.h Managers/videomanager.cpp
         Managers/vlcmanager.h Managers/vlcmanager.cpp
+        Programs/Development/devframecapture.h Programs/Development/devframecapture.cpp
         Programs/Modules/Common/framecapture.h Programs/Modules/Common/framecapture.cpp
         Programs/Modules/Common/runcommand.h Programs/Modules/Common/runcommand.cpp
         Programs/Modules/modulebase.h Programs/Modules/modulebase.cpp
